@@ -20,6 +20,12 @@ changing the title bar.
 other words, we want everything that appears in the FolderTree, not all 
 possible folders, nor just the ones that are open.
 
+*) fix the 'save draft?' messages under jdk1.2.
+
+*) fix the LookAndFeel support.
+
+(windows)
+
 *) test and fix the external editor spawning on windows.  -- more or less
 	done, but we should go ahead and see if we can add a wrapper for
 	windows.
@@ -30,12 +36,6 @@ works when you package up a .jar file.
 
 *) (related to above) check to make sure that files (especially the address
 	book file) are created correctly under windows.
-
-*) <sigh> save properties to a file at the end of an editor.
-
-*) fix the 'save draft?' messages under jdk1.2.
-
-*) fix the LookAndFeel support.
 
 ------------------
 
