@@ -1,3 +1,7 @@
+clicking Ok on a property editor now saves the current properties to disk.
+this means that you no longer have to exit out of pooka cleanly in order to
+have your changes save.
+
 fixed an ArrayIndexOutOfBoundsException if you right-clicked on an entry
 in the AttachmentPane that wasn't selected.
 
